--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
 </head>
 <body>
     <div class="letter">
-        <h2>Hey [Her Name],</h2>
-        <p>I don’t know if this is the best way to say it, but here I am, taking a chance—because if I don’t, I know I’ll regret it forever.</p>
-        <p>It might sound a little crazy, but from the moment I first caught a glimpse of you, something changed...</p>
-        <p>(Your full letter goes here)</p>
+        <h2>Hey,</h2>
+        <p>I don't know if this is the best way to say it, but here I am, taking a chance—because if I don’t, I know I’ll regret it forever.</p>
+        
+        <p>This might sound a little crazy, but from the moment I first saw you, something changed. That one glimpse of you, dressed in that pink suit, made my heart pause for a second. You looked like a dream—my dream.</p>
+
+        <p>Since then, I don’t know why, but my mind keeps replaying that moment. I catch myself looking for you, hoping for another chance to see you, even just for a second.</p>
+
+        <p>I've tried to say this in person, but every time, words fail me. So here I am, writing it down—because if I never tell you, I'll always wonder, ‘What if?’</p>
+
+        <p>I have a huge crush on you. And I don’t expect anything in return—maybe you already have someone in your life, maybe you don’t. But I had to tell you.</p>
+
+        <p>All I ask is for a little moment—just one cup of chai, coffee, or whatever you like. Just 30 minutes. That’s all. No expectations, no pressure—just a simple conversation.</p>
+
+        <p>Maybe this letter sounds silly. Maybe you’ll smile. Maybe you’ll ignore it. But at least, I won’t regret not trying.</p>
+
+        <p>Thank you for reading this.</p>
+
         <p><strong>Yours sincerely,</strong></p>
         <p><strong>Nitzz</strong></p>
     </div>
 </body>
 </html>
+
