--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,7 @@
             text-align: center;
             background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             margin: 0;
-            padding: 50px;
+            padding: 50px 20px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,15 +20,26 @@
         }
         .container {
             background: white;
-            padding: 30px;
+            padding: 20px;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            max-width: 500px;
+            max-width: 90%;
+            width: 500px;
             animation: fadeIn 1.5s ease-in-out;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: scale(0.9); }
             to { opacity: 1; transform: scale(1); }
+        }
+        .heart {
+            color: red;
+            font-size: 30px;
+            animation: heartbeat 1.5s infinite;
+        }
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
         }
         h2 {
             color: #d6336c;
@@ -44,7 +54,12 @@
             font-weight: bold;
             color: #d6336c;
         }
-        .floating-butterflies {
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #666;
+        }
+        .floating-hearts, .floating-butterflies {
             position: absolute;
             top: 0;
             left: 0;
@@ -52,51 +67,95 @@
             height: 100%;
             pointer-events: none;
         }
-        .butterfly {
+        .heart-shape, .butterfly {
             position: absolute;
-            font-size: 80px;
-            color: rgba(255, 255, 255, 0.5);
-            animation: fadeButterfly 6s infinite ease-in-out;
+            bottom: 0;
+            font-size: 20px;
+            animation: floatUp 4s infinite ease-in-out;
         }
-        @keyframes fadeButterfly {
-            0% { opacity: 0; transform: scale(0.5) translateY(100vh); }
-            50% { opacity: 1; transform: scale(1) translateY(50vh); }
-            100% { opacity: 0; transform: scale(1.5) translateY(-20vh); }
+        @keyframes floatUp {
+            0% { transform: translateY(0); opacity: 1; }
+            100% { transform: translateY(-100vh); opacity: 0; }
+        }
+        .music-button {
+            margin-top: 15px;
+            background: #d6336c;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 20px;
+                height: auto;
+            }
+            .container {
+                padding: 15px;
+                width: 100%;
+            }
+            p {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="floating-butterflies"></div>
-    
-    <div class="container">
-        <h2>Hey, <span class="heart">❤️</span></h2>
-        <h2>Shailja</h2>
-        <p>I don't know if this is the best way to say it, but here I am, taking a chance—because if I don’t, I know I’ll regret it forever.</p>
-        <p>This might sound a little crazy, but from the moment I first saw you, something changed. That one glimpse of you, dressed in that pink suit, made my heart pause for a second. You looked like a dream—my dream.</p>
-        <p>Since then, I don’t know why, but my mind keeps replaying that moment. I catch myself looking for you, hoping for another chance to see you, even just for a second.</p>
-        <p>I've tried to say this in person, but every time, words fail me. So here I am, writing it down—because if I never tell you, I'll always wonder, ‘What if?’</p>
-        <p>I have a huge crush on you. And I don’t expect anything in return—maybe you already have someone in your life, maybe you don’t. But I had to tell you.</p>
-        <p>All I ask is for a little moment—just one cup of chai, coffee, or whatever you like. Just 30 minutes. That’s all. No expectations, no pressure—just a simple conversation.</p>
-        <p>Maybe this letter sounds silly. Maybe you’ll smile. Maybe you’ll ignore it. But at least, I won’t regret not trying.</p>
-        <p class="signature">Yours sincerely,</p>
-        <p class="signature">Nitzz</p>
-        <p class="footer">P.S. I hope this message finds a way to your heart. ❤️</p>
-    </div>
-    
-    <script>
-        function createButterflies() {
-            const butterflyContainer = document.querySelector('.floating-butterflies');
-            for (let i = 0; i < 3; i++) {
-                let butterfly = document.createElement('div');
-                butterfly.innerHTML = '🦋';
-                butterfly.classList.add('butterfly');
-                butterfly.style.left = Math.random() * 100 + 'vw';
-                butterfly.style.animationDuration = (Math.random() * 3 + 4) + 's';
-                butterflyContainer.appendChild(butterfly);
-                setTimeout(() => butterfly.remove(), 6000);
-            }
+    <div class="floating-hearts"></div>
+    <div class="floating-butterflies"></div><div class="container">
+    <h2>Hey, <span class="heart">❤️</span></h2>
+    <h2>Shailja</h2>
+    <p>I don't know if this is the best way to say it, but here I am, taking a chance—because if I don’t, I know I’ll regret it forever.</p>
+    <p>This might sound a little crazy, but from the moment I first saw you, something changed. That one glimpse of you, dressed in that pink suit, made my heart pause for a second. You looked like a dream—my dream.</p>
+    <p>Since then, I don’t know why, but my mind keeps replaying that moment. I catch myself looking for you, hoping for another chance to see you, even just for a second.</p>
+    <p>I've tried to say this in person, but every time, words fail me. So here I am, writing it down—because if I never tell you, I'll always wonder, ‘What if?’</p>
+    <p>I have a huge crush on you. And I don’t expect anything in return—maybe you already have someone in your life, maybe you don’t. But I had to tell you.</p>
+    <p>All I ask is for a little moment—just one cup of chai, coffee, or whatever you like. Just 30 minutes. That’s all. No expectations, no pressure—just a simple conversation.</p>
+    <p>Maybe this letter sounds silly. Maybe you’ll smile. Maybe you’ll ignore it. But at least, I won’t regret not trying.</p>
+    <p class="signature">Yours sincerely,</p>
+    <p class="signature">Nitzz</p>
+    <p class="footer">P.S. I hope this message finds a way to your heart. ❤️</p>
+    <button class="music-button" onclick="playMusic()">Play Music 🎵</button>
+</div>
+
+<audio id="bg-music" loop>
+    <source src="your-music-file.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<script>
+    function playMusic() {
+        document.getElementById('bg-music').play();
+    }
+    function createHearts() {
+        const heartContainer = document.querySelector('.floating-hearts');
+        for (let i = 0; i < 10; i++) {
+            let heart = document.createElement('div');
+            heart.innerHTML = '❤️';
+            heart.classList.add('heart-shape');
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDuration = (Math.random() * 3 + 2) + 's';
+            heartContainer.appendChild(heart);
+            setTimeout(() => heart.remove(), 4000);
         }
-        setInterval(createButterflies, 2000);
-    </script>
+    }
+    function createButterflies() {
+        const butterflyContainer = document.querySelector('.floating-butterflies');
+        for (let i = 0; i < 5; i++) {
+            let butterfly = document.createElement('div');
+            butterfly.innerHTML = '🦋';
+            butterfly.classList.add('butterfly');
+            butterfly.style.left = Math.random() * 100 + 'vw';
+            butterfly.style.animationDuration = (Math.random() * 4 + 3) + 's';
+            butterflyContainer.appendChild(butterfly);
+            setTimeout(() => butterfly.remove(), 5000);
+        }
+    }
+    setInterval(createHearts, 1000);
+    setInterval(createButterflies, 1500);
+</script>
+
 </body>
 </html>
